--- a/RESTfulAPI/RESTfulAPI/appsettings.json
+++ b/RESTfulAPI/RESTfulAPI/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Translator": {
+    "UseFake": "false"
+  }
 }
